# my-rust-interpreter

./: .gitignore  Cargo.toml  fleet.toml  readme.md
.github/workflows/: ci.yaml
ast_macro/: Cargo.toml
crates/ast/: Cargo.toml
crates/ast/src/: array_literal.rs  assign_expression.rs  block_statement.rs  bool_literal.rs  break_expression.rs  call_expression.rs  expression_statement.rs  float_literal.rs  function_literal.rs  hash_literal.rs  identifier.rs  if_expression.rs  index_expression.rs  infix_expression.rs  int_literal.rs  let_statement.rs  lib.rs  prefix_expression.rs  program.rs  return_statement.rs  string_literal.rs  test.rs  update_expression.rs  while_loop_literal.rs
crates/ast_macro/: Cargo.toml
crates/ast_macro/src/: lib.rs
crates/code/: Cargo.toml
crates/code/src/: lib.rs  test.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: compilation_scope.rs  emitted_instruction.rs  lib.rs  symbol_table.rs  test.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: lib.rs  repl.rs
crates/interpreter/src/evaluator/: mod.rs  test.rs
crates/interpreter/src/object/: array_object.rs  boolean.rs  builtin.rs  context.rs  error_object.rs  float_object.rs  function_object.rs  hash_key.rs  hash_object.rs  mod.rs  null.rs  return_value.rs  string_object.rs
crates/interpreter/src/testing_object/: mod.rs
crates/lang_compiler/: Cargo.toml
crates/lang_compiler/src/: lib.rs  test.rs
crates/lang_parser/: Cargo.toml
crates/lang_parser/src/: lib.rs
crates/lang_parser/src/ast/: call_expression.rs  function_literal.rs  hash_literal.rs  identifier.rs  if_expression.rs  index_expression.rs  infix_expression.rs  prefix_expression.rs  program.rs  return_statement.rs  string_literal.rs
crates/lang_parser/src/lexer/: lexer.rs  mod.rs
crates/lang_parser/src/parser/: parser.rs  test.rs
crates/lang_vm/: Cargo.toml
crates/lang_vm/examples/: test_enum.rs
crates/lang_vm/src/: lib.rs
crates/lang_vm/src/code/: mod.rs  test.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer.rs  lib.rs  test.rs  utils.rs
crates/object/: Cargo.toml
crates/object/src/: array_object.rs  boolean.rs  builtin.rs  closure.rs  compiled_function.rs  context.rs  error_object.rs  float_object.rs  function_object.rs  hash_key.rs  hash_object.rs  integer.rs  lib.rs  null.rs  return_value.rs  string_object.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  parser.rs  parser_fn.rs  test.rs
crates/testing/: Cargo.toml
crates/testing/src/: cases.rs  lib.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs  token.rs
crates/vm/: Cargo.toml
crates/vm/src/: frame.rs  lib.rs  test.rs
examples/: example_ast_macro.rs  fib.js  fib.mok  fib.rs  fib_interpreter.rs  fib_loop.js  fib_loop.mok  fib_loop.rs  fib_loop_interpreter.rs  fib_vm.rs  hash_expression.rs  hash_practice.rs  object_macro.rs  simple_vm.rs
src/: lib.rs  main.rs  repl.rs  utils.rs
src/ast/: array_literal.rs  block_statement.rs  bool_literal.rs  call_expression.rs  expression_statement.rs  function_literal.rs  hash_literal.rs  identifier.rs  if_expression.rs  index_expression.rs  infix_expression.rs  int_literal.rs  let_statement.rs  mod.rs  prefix_expression.rs  program.rs  return_statement.rs  string_literal.rs  test.rs
src/evaluator/: mod.rs  test.rs
src/lexer/: lexer.rs  mod.rs  test.rs
src/object/: array_object.rs  boolean.rs  builtin.rs  context.rs  error_object.rs  function_object.rs  hash_object.rs  integer.rs  mod.rs  null.rs  return_value.rs  string_object.rs
src/parser/: mod.rs  parser.rs  parser_fn.rs  test.rs
src/token/: mod.rs  token.rs
