[package]
name = "my-rust-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"ast_macro" = { path = "./crates/ast_macro" }
"lang_parser" = { path = "./crates/lang_parser" }
"interpreter" = { path = "./crates/interpreter" }

[workspace]
members = ["./crates/ast_macro", "./crates/lang_parser", "./crates/interpreter"]
