[package]
name = "my-rust-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"ast" = { path = "./crates/ast" }
"ast_macro" = { path = "./crates/ast_macro" }
"code" = { path = "./crates/code" }
"compiler" = { path = "./crates/compiler" }
"interpreter" = { path = "./crates/interpreter" }
"lexer" = { path = "./crates/lexer" }
"parser" = { path = "./crates/parser" }
"testing" = { path = "./crates/testing" }
"token" = { path = "./crates/token" }
"vm" = { path = "./crates/vm" }
clap = { version = "4.4.18", features = ["derive"] }

[workspace]
members = [
    "crates/ast",
    "crates/ast_macro",
    "crates/code",
    "crates/compiler",
    "crates/interpreter",
    "crates/parser",
    "crates/testing",
    "crates/token",
    "crates/vm",
]
