[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"ast" = { path = "../ast" }
"ast_macro" = { path = "../ast_macro" }
"lexer" = { path = "../lexer" }
"token" = { path = "../token" }

[dev-dependencies]
"lexer" = { path = "../lexer" }
"parser" = { path = "../parser" }
