[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"ast_macro" = { path = "../ast_macro" }
"ast" = { path = "../ast" }
"code" = { path = "../code" }
"lexer" = { path = "../lexer" }
"object" = { path = "../object" }
"byteorder" = "*"
"parser" = { path = "../parser" }
"compiler" = { path = "../compiler" }
"interpreter" = { path = "../interpreter" }
"bumpalo" = { version = "3.14.0" , features = [ "boxed", "collections", "default", "std" ] }

[dev-dependencies]
"testing" = { path = "../testing" }
